# firo

./: .cproject  .dockerignore  .gitignore  .gitmodules  .project  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  CppProperties.json  DASH_COMPARISON_AUDIT.md  Dockerfile  INSTALL  INSTALL.md  Jenkinsfile  Makefile  Makefile.am  Makefile.in  README.md  SECURITY_AUDIT_MASTERNODE.md  SUB-003-assessment.md  V.md  VULNERABILITY_REPORT_VERIFICATION.md  ZNODE.md  aclocal.m4  autogen.sh  build.sh  config.status  configure  configure.ac  configure~  copy_scripts.sh  debug.sh  fred  generate_coverage.sh  git.diff  lgtm.yml  libbitcoinconsensus.pc  (+18 more)
src/: .gitignore  CMakeLists.txt  Lyra2.c  Lyra2.h  Makefile  Makefile.am  Makefile.bench.include  Makefile.clientapi.include  Makefile.clientapitest.include  Makefile.elysium.include  Makefile.elysiumtest.include  Makefile.exodus.include  Makefile.exodustest.include  Makefile.gtest.include  Makefile.in  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Sigma.sublime-project  Sigma.sublime-workspace  activemasternode.cpp  activemasternode.h  activevnode.cpp  activevnode.h  activeznode.cpp  activeznode.h  addrdb.cpp  addressindex.h  addresstype.h  addrman.cpp  addrman.h  alert.cpp  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  autosparktx.sh  auxpow.cpp  auxpow.h  (+243 more)
src/.deps/: libbitcoin_common_a-amount.Po  libbitcoin_common_a-auxpow.Po  libbitcoin_common_a-base58.Po  libbitcoin_common_a-chainparams.Po  libbitcoin_common_a-coins.Po  libbitcoin_common_a-compressor.Po  libbitcoin_common_a-core_read.Po  libbitcoin_common_a-core_write.Po  libbitcoin_common_a-key.Po  libbitcoin_common_a-keystore.Po  libbitcoin_common_a-netbase.Po  libbitcoin_common_a-protocol.Po  libbitcoin_common_a-scheduler.Po  libbitcoin_consensus_a-arith_uint256.Po  libbitcoin_consensus_a-hash.Po  libbitcoin_consensus_a-pubkey.Po  libbitcoin_consensus_a-uint256.Po  libbitcoin_consensus_a-utilstrencodings.Po  libbitcoin_server_a-addrman.Po  libbitcoin_server_a-blockencodings.Po  libbitcoin_server_a-bloom.Po  libbitcoin_server_a-chain.Po  libbitcoin_server_a-checkpoints.Po  libbitcoin_server_a-dbwrapper.Po  libbitcoin_server_a-httprpc.Po  libbitcoin_server_a-httpserver.Po  libbitcoin_server_a-init.Po  libbitcoin_server_a-main.Po  libbitcoin_server_a-merkleblock.Po  libbitcoin_server_a-miner.Po  libbitcoin_server_a-net.Po  libbitcoin_server_a-noui.Po  libbitcoin_server_a-pow.Po  libbitcoin_server_a-rest.Po  libbitcoin_server_a-timedata.Po  libbitcoin_server_a-torcontrol.Po  libbitcoin_server_a-txdb.Po  libbitcoin_server_a-txmempool.Po  libbitcoin_server_a-ui_interface.Po  libbitcoin_server_a-validation.Po  (+18 more)
src/.libs/: libbitcoinconsensus.la  libbitcoinconsensus.lai
src/Lyra2Z/: Lyra2.c  Lyra2Z.c  Lyra2Z.h  sph_types.h
src/argon2/: core.c  core.h  opt.c  thread.c  thread.h
src/bench/: CMakeLists.txt  bench.cpp  bench.h  bench_bitcoin.cpp  benchmark.cpp  benchmark.h  checkblock.cpp  crypto_hash.cpp  mempool_eviction.cpp  spark_bpplus.cpp  spark_chaum.cpp  spark_grootle.cpp  spark_schnorr.cpp
src/bip47/: Bip47Account.cpp  Bip47Account.h  Bip47Address.cpp  Bip47Address.h  Bip47ChannelAddress.cpp  Bip47ChannelAddress.h  Bip47PaymentChannel.cpp  Bip47PaymentChannel.h  Bip47Util.cpp  Bip47Util.h  Bip47Wallet.cpp  Bip47Wallet.h  PaymentAddress.cpp  PaymentAddress.h  PaymentCode.cpp  PaymentCode.h  SecretPoint.cpp  SecretPoint.h  account.cpp  account.h  address.cpp  address.h  bip47_common.cpp  bip47_common.h  bip47utils.cpp  bip47utils.h  channeladdress.cpp  channeladdress.h  common.cpp  common.h  defs.h  paymentaddress.cpp  paymentaddress.h  paymentchannel.cpp  paymentchannel.h  paymentcode.cpp  paymentcode.h  secretpoint.cpp  secretpoint.h  utils.cpp  (+1 more)
src/bitcoin_bignum/: bignum.h  netbase.h  serialize.h
src/bls/: bls.cpp  bls.h  bls_worker.cpp
src/bls-signatures/: CMakeLists.txt  Makefile  configure  configure-cmake.sh  configure.ac
src/client-api/: README.md  bigint.cpp  bigint.h  blockchain.cpp  client.cpp  client.h  elysium.cpp  elysium.h  externs.cpp  externs.h  json.hpp  masternode.cpp  methods.cpp  misc.cpp  misc.h  privatetransaction.cpp  privatetransaction.h  protocol.cpp  protocol.h  register.h  req_example.py  send.cpp  send.h  server.cpp  server.h  settingModule.cpp  settings.cpp  settings.h  sigma.cpp  sigma.h  sub_example.py  wallet.cpp  wallet.h  zerocoin.cpp  zmq.cpp  zmq.h  zmqconfig.h  znode.cpp
src/common/: GeneratorVector.h  GeneratorVector.hpp
src/compat/: byteswap.h  endian.h  glibcxx_sanity.cpp
src/config/: bitcoin-config.h  bitcoin-config.h.in  stamp-h1
src/consensus/: consensus.h  libbitcoinconsensus_la-merkle.lo  merkle.cpp  params.h  tx_verify.cpp  validation.h
src/cpp-ethereum/: .gitignore  CMakeLists.txt
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  common.h  keccak.c  libbitcoinconsensus_la-aes.lo  libbitcoinconsensus_la-hmac_sha256.lo  libbitcoinconsensus_la-hmac_sha512.lo  libbitcoinconsensus_la-ripemd160.lo  libbitcoinconsensus_la-sha1.lo  libbitcoinconsensus_la-sha256.lo  libbitcoinconsensus_la-sha512.lo  progpow.cpp  progpow.h  ripemd160.cpp  scrypt-sse2.cpp  scrypt.cpp  scrypt.h  sha1.cpp  sha256.cpp  sha3.cpp  sha3.h  sha512.cpp
src/cryptopp/: GNUmakefile  sh.exe.stackdump  tigertab.cpp
src/elysium/: COPYING  README.md  activation.cpp  activation.h  coinsigner.cpp  coinsigner.h  consensushash.cpp  consensushash.h  convert.cpp  convert.h  createpayload.cpp  createpayload.h  createtx.cpp  createtx.h  dex.cpp  dex.h  ecdsa_context.cpp  ecdsa_context.h  ecdsa_signature.cpp  ecdsa_signature.h  ecdsasignature.cpp  ecdsasignature.h  elysium.cpp  elysium.h  errors.h  exodus.cpp  exodus.h  fees.cpp  fees.h  fetchwallettx.cpp  fetchwallettx.h  lelantusdb.cpp  lelantusdb.h  lelantusprimitives.cpp  lelantusprimitives.h  lelantusutils.cpp  lelantusutils.h  lelantuswallet.cpp  lelantuswallet.h  lelantuswalletmodels.cpp  (+74 more)
src/evo/: cbtx.cpp  cbtx.h  deterministicmns.cpp  deterministicmns.h  evodb.cpp  evodb.h  mnauth.cpp  mnauth.h  providertx.cpp  spork.cpp  (+4 more)
(+25516 files in other folders)
